整理一下學校資料頁

--- a/index.ejs
+++ b/index.ejs
@@ -204,11 +204,10 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-6">
-			<button id="btn-save" data-action="save" type="button" class="btn btn-primary btn-block">儲存</button>
-		</div>
-		<div class="col-6">
-			<button id="btn-commit" data-action="commit" type="button" class="btn btn-danger btn-block">送出</button>
-		</div>
-	</div>
+    <div class="col-12 text-center">
+      <button id="btn-save" data-action="save" class="btn btn-primary">
+        儲存
+      </button>
+    </div>
+  </div>
 </form>
