--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -16,10 +16,11 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="offset-3 col-6">
-			<button id="btn-deptInfoSave" data-action="save" type="button" class="btn btn-primary btn-block">儲存</button>
-		</div>
-		</div>
+    <div class="col-12 text-center">
+      <button id="btn-save" data-action="save" class="btn btn-primary">
+        儲存
+      </button>
+    </div>
 	</div>
 </form>
 <hr>
@@ -319,9 +320,8 @@
 			</div>
 
 			<div class="modal-footer">
-				<!-- 「確認送出」後，block 住 form -->
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
 				<button type="button" class="btn btn-primary" id="deptDetailSave">儲存</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">離開</button>
 			</div>
 
 		</div>
