fix 儲存動作被 form 搶走

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css">
 
 <h2>學制資訊</h2>
-<form id="form-deptInfo">
+<div id="form-deptInfo">
 	<div class="row">
 		<div class="form-group col">
 			<label for="description">中文備註</label>
@@ -17,12 +17,12 @@
 	</div>
 	<div class="row">
     <div class="col-12 text-center">
-      <button id="btn-save" data-action="save" class="btn btn-primary">
+      <button id="btn-deptInfoSave" data-action="save" class="btn btn-primary">
         儲存
       </button>
     </div>
 	</div>
-</form>
+</div>
 <hr>
 <div class="row">
 	<div class="col-md-7 col-6">
