--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -161,149 +161,152 @@
 						<% } else { -%>
 						<%- include deptInfoForm/_quotaOthers %>
 						<% } -%>
-
-						<div class="row">
-							<div class="col">
-								<div class="card">
-									<div class="card-header bg-primary text-white">
-										審查費用
+						
+						<div id="review-div">
+							<div class="row">
+								<div class="col">
+									<div class="card">
+										<div class="card-header bg-primary text-white">
+											審查費用
+										</div>
+										<div class="card-block">
+											<form>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
+														是否需要收審查費用*
+													</label>
+												</div>
+												<hr>
+												<div id="reviewFeeDetailForm" class="form-group">
+													<label class="form-control-label" for="">審查費用中文說明</label>
+													<textarea class="form-control" rows="3" id="reviewFeeDetail"></textarea>
+												</div>
+												<div id="engReviewFeeDetailForm" class="form-group">
+													<label class="form-control-label" for="">審查費用英文說明</label>
+													<textarea class="form-control" rows="3" id="engReviewFeeDetail"></textarea>
+												</div>
+											</form>
+										</div>
 									</div>
-									<div class="card-block">
-										<form>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
-													是否需要收審查費用*
-												</label>
-											</div>
+								</div>
+							</div>
+
+							<div class="row">
+								<div class="col">
+									<div class="card">
+										<div class="card-header bg-primary text-white">
+											other
+										</div>
+										<div class="card-block">
+
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
+														是否招收外生專班*
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
+														是否為全英文授課*
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
+														是否招收身障學生*
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
+														是否招收不具華文基礎學生*
+													</label>
+												</div>
+												<div class="form-check">
+													<label class="form-check-label">
+														<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
+														是否限制出生日期*
+													</label>
+												</div>
+
 											<hr>
-											<div id="reviewFeeDetailForm" class="form-group">
-												<label class="form-control-label" for="">審查費用中文說明</label>
-												<textarea class="form-control" rows="3" id="reviewFeeDetail"></textarea>
+											<p>限制出生日期</p>
+											<div class="form-inline">
+												<div id="birthLimitAfterForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
+													<input type="text" class="form-control datepicker" id="birthLimitAfter">
+													<div class="input-group-addon">以後</div>
+												</div>
 											</div>
-											<div id="engReviewFeeDetailForm" class="form-group">
-												<label class="form-control-label" for="">審查費用英文說明</label>
-												<textarea class="form-control" rows="3" id="engReviewFeeDetail"></textarea>
-											</div>
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col">
-								<div class="card">
-									<div class="card-header bg-primary text-white">
-										other
-									</div>
-									<div class="card-block">
-
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
-													是否招收外生專班*
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
-													是否為全英文授課*
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
-													是否招收身障學生*
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
-													是否招收不具華文基礎學生*
-												</label>
-											</div>
-											<div class="form-check">
-												<label class="form-check-label">
-													<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
-													是否限制出生日期*
-												</label>
-											</div>
-
-										<hr>
-										<p>限制出生日期</p>
-										<div class="form-inline">
-											<div id="birthLimitAfterForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control datepicker" id="birthLimitAfter">
-												<div class="input-group-addon">以後</div>
-											</div>
-										</div>
-										<div class="form-inline" style="padding-top: 20px;">
-											<div id="birthLimitBeforeForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
-												<input type="text" class="form-control datepicker" id="birthLimitBefore">
-												<div class="input-group-addon">以前</div>
+											<div class="form-inline" style="padding-top: 20px;">
+												<div id="birthLimitBeforeForm" class="input-group mb-2 mr-sm-2 mb-sm-0">
+													<input type="text" class="form-control datepicker" id="birthLimitBefore">
+													<div class="input-group-addon">以前</div>
+												</div>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
-						</div>
+						
 
-						<hr>
-						<div id="form-reviewItems">
+							<hr>
+							<div id="form-reviewItems">
 
-							<div v-for="type in reviewItemsTypes">
-								<div class="row">
-									<div class="col-lg-6">
-										<div class="form-group">
-											<div class="input-group">
-												<span class="input-group-addon">
-													<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
-												</span>
-												<input
-												type="text"
-												class="form-control"
-												style="background-color: white;"
-												v-bind:value="type.name" 
-												disabled="disabled">
+								<div v-for="type in reviewItemsTypes">
+									<div class="row">
+										<div class="col-lg-6">
+											<div class="form-group">
+												<div class="input-group">
+													<span class="input-group-addon">
+														<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
+													</span>
+													<input
+													type="text"
+													class="form-control"
+													style="background-color: white;"
+													v-bind:value="type.name" 
+													disabled="disabled">
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-6">
+											<div class="form-group">
+												<div class="input-group">
+													<span class="input-group-addon">
+														<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
+													</span>
+													<input
+													type="text"
+													class="form-control"
+													style="background-color: white;"
+													value="是否為必備" 
+													disabled="disabled">
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-lg-6">
-										<div class="form-group">
-											<div class="input-group">
-												<span class="input-group-addon">
-													<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
-												</span>
-												<input
-												type="text"
-												class="form-control"
-												style="background-color: white;"
-												value="是否為必備" 
-												disabled="disabled">
+
+									<div class="row">
+										<div class="col-12">
+											<div class="form-group" v-bind:class="{'has-danger': type.error == true}">
+												<label class="form-control-label" for="">審查項目中文說明</label>
+												<textarea class="form-control" rows="3" v-model="type.description"></textarea>
 											</div>
 										</div>
 									</div>
-								</div>
 
-								<div class="row">
-									<div class="col-12">
-										<div class="form-group" v-bind:class="{'has-danger': type.error == true}">
-											<label class="form-control-label" for="">審查項目中文說明</label>
-											<textarea class="form-control" rows="3" v-model="type.description"></textarea>
+									<div class="row">
+										<div class="col-12">
+											<div class="form-group">
+												<label for="">審查項目英文說明</label>
+												<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
+											</div>
 										</div>
 									</div>
+									<hr>
 								</div>
-
-								<div class="row">
-									<div class="col-12">
-										<div class="form-group">
-											<label for="">審查項目英文說明</label>
-											<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
-										</div>
-									</div>
-								</div>
-								<hr>
 							</div>
 						</div>
 
