--- a/index.ejs
+++ b/index.ejs
@@ -1,4 +1,4 @@
-<form id="form-schoolInfo">
+<div id="form-schoolInfo">
 	<div class="row">
 		<div class="form-group col-6">
 			<div class="input-group">
@@ -210,4 +210,4 @@
       </button>
     </div>
   </div>
-</form>
+</div>
