在學制資訊右上角加了"列印"的按鈕

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -1,8 +1,18 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap-sortable/2.0.0/bootstrap-sortable.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.standalone.min.css">
 
-<h2>學制資訊</h2>
-<div id="form-deptInfo">
+<div class="row">
+	<div class="col-10 text-left">
+		<h2>學制資訊</h2>
+	</div>
+	<div class="col-2 text-right">
+		<button class="btn btn-success">
+			列印
+		</button>
+	</div>
+</div>
+
+<div id="form-deptInfo"> 
 	<div class="row">
 		<div class="form-group col">
 			<label for="description">中文備註</label>
