--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -209,7 +209,6 @@
 											other
 										</div>
 										<div class="card-block">
-
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
@@ -263,59 +262,64 @@
 
 							<hr>
 							<div id="form-reviewItems">
-
 								<div v-for="type in reviewItemsTypes">
-									<div class="row">
-										<div class="col-lg-6">
-											<div class="form-group">
-												<div class="input-group">
-													<span class="input-group-addon">
-														<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
-													</span>
-													<input
-													type="text"
-													class="form-control"
-													style="background-color: white;"
-													v-bind:value="type.name" 
-													disabled="disabled">
+									<div class="card">
+										<div class="card-header bg-primary text-white">
+												{{type.name}}
+										</div>
+										<div class="card-block">
+											<div class="row">
+												<div class="col-lg-6">
+													<div class="form-group">
+														<div class="input-group">
+															<span class="input-group-addon">
+																<input type="checkbox" v-model="type.needed" v-bind:disabled="!type.modifiable">
+															</span>
+															<input
+															type="text"
+															class="form-control"
+															style="background-color: white;"
+															v-bind:value="type.name" 
+															disabled="disabled">
+														</div>
+													</div>
+												</div>
+												<div class="col-lg-6">
+													<div class="form-group">
+														<div class="input-group">
+															<span class="input-group-addon">
+																<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
+															</span>
+															<input
+															type="text"
+															class="form-control"
+															style="background-color: white;"
+															value="是否為必備" 
+															disabled="disabled">
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<div class="row">
+												<div class="col-12">
+													<div class="form-group" v-bind:class="{'has-danger': type.error == true}">
+														<label class="form-control-label" for="">審查項目中文說明</label>
+														<textarea class="form-control" rows="3" v-model="type.description"></textarea>
+													</div>
+												</div>
+											</div>
+
+											<div class="row">
+												<div class="col-12">
+													<div class="form-group">
+														<label for="">審查項目英文說明</label>
+														<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
+													</div>
 												</div>
 											</div>
 										</div>
-										<div class="col-lg-6">
-											<div class="form-group">
-												<div class="input-group">
-													<span class="input-group-addon">
-														<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
-													</span>
-													<input
-													type="text"
-													class="form-control"
-													style="background-color: white;"
-													value="是否為必備" 
-													disabled="disabled">
-												</div>
-											</div>
-										</div>
 									</div>
-
-									<div class="row">
-										<div class="col-12">
-											<div class="form-group" v-bind:class="{'has-danger': type.error == true}">
-												<label class="form-control-label" for="">審查項目中文說明</label>
-												<textarea class="form-control" rows="3" v-model="type.description"></textarea>
-											</div>
-										</div>
-									</div>
-
-									<div class="row">
-										<div class="col-12">
-											<div class="form-group">
-												<label for="">審查項目英文說明</label>
-												<textarea class="form-control" rows="3" v-model="type.eng_description"></textarea>
-											</div>
-										</div>
-									</div>
-									<hr>
 								</div>
 							</div>
 						</div>
