把必填欄位改成紅色粗體

--- a/components/_accountEditModal.ejs
+++ b/components/_accountEditModal.ejs
@@ -12,45 +12,45 @@
 						<form>
 							<div class="row">
 								<div class="form-group col-6">
-									<label for="" >帳號</label>
+									<label>帳號</label>
 									<input type="text" class="form-control" name="username" disabled>
 								</div>
 								<div class="col-6"></div>
 								<div class="form-group col-6">
-									<label for="" >密碼(新密碼)</label>
+									<label>密碼(新密碼)</label>
 									<input type="password" class="form-control" name="password">
 									<small>若不更改密碼，請勿填寫</small>
 								</div>
 								<div class="form-group col-6" id="password-check-div">
-									<label for="" >再輸入一次</label>
+									<label>再輸入一次</label>
 									<input type="password" class="form-control" name="password-second">
 									<div class="form-control-feedback hide" id="password-check">密碼不相符</div>
 								</div>	
 							</div>
 							<div class="row">
-								<div class="form-group col-6">
-									<label for="" >中文姓名*</label>
+								<div class="form-group col-6 text-danger">
+									<strong>中文姓名*</strong>
 									<input type="text" class="form-control required" name="name">
 								</div>
-								<div class="form-group col-6">
-									<label for="">英文姓名</label>
-									<input type="text" class="form-control" name="eng_name">
+								<div class="form-group col-6 text-danger">
+									<strong>職稱*</strong>
+									<input type="text" class="form-control" name="job-title">
 								</div>
 							</div>
 							<div class="row">
-								<div class="form-group col-12" id="email-div">
-									<label for="">電子郵件*</label>
+								<div class="form-group col-12 text-danger" id="email-div">
+									<strong>電子郵件*</strong>
 									<input type="email" class="form-control required" name="email" placeholder="example@ncnu.com">
 									<div class="form-control-feedback hide" id="email-warning">請依格式輸入（Ex: example@example.com）</div>
 								</div>
 							</div>
 							<div class="row">
-								<div class="form-group col-6">
-									<label for="">所屬單位*</label>
+								<div class="form-group col-6 text-danger">
+									<strong>所屬單位*</strong>
 									<input type="text" class="form-control required" name="organization">
 								</div>
-								<div class="form-group col-6">
-									<label for="">聯絡電話*</label>
+								<div class="form-group col-6 text-danger">
+									<strong>聯絡電話*</strong>
 									<input type="text" class="form-control required" name="phone">
 								</div>
 							</div>
