--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -110,7 +110,7 @@
 						</div>
 						<div class="row">
 							<div id="urlForm" class="form-group col-6">
-								<label class="form-control-label" for="">系中文網站網址*</label>
+								<strong class="form-control-label text-danger" for="">系中文網站網址*</strong>
 								<input type="text" class="form-control" id="url">
 							</div>
 							<div id="engUrlForm" class="form-group col-6">
@@ -120,7 +120,7 @@
 						</div>
 						<div class="row">
 							<div id="mainGroupForm" class="form-group col-6">
-								<label class="form-control-label" for="">主要隸屬學群*</label>
+								<strong class="form-control-label text-danger" for="">主要隸屬學群*</strong>
 								<select class="form-control" id="mainGroup">
 								</select>
 							</div>
@@ -132,7 +132,7 @@
 						</div>
 						<div class="row">
 							<div id="genderLimitForm" class="form-group col-6">
-								<label class="form-control-label" for="">招收性別限制*</label>
+								<strong class="form-control-label text-danger" for="">招收性別限制*</strong>
 								<select class="form-control" id="genderLimit">
 									<option value="">男女兼收</option>
 									<option value="M">限男</option>
@@ -140,7 +140,7 @@
 								</select>
 							</div>
 							<div id="evaluationForm" class="form-group col-6">
-								<label class="form-control-label" for="">最近一次系所評鑑*</label>
+								<strong class="form-control-label text-danger" for="">最近一次系所評鑑*</strong>
 								<select class="form-control" id="evaluation">
 									<option>系所評鑑</option>
 								</select>
@@ -148,7 +148,7 @@
 						</div>
 						<div class="row">
 							<div id="descriptionForm" class="form-group col">
-								<label class="form-control-label" for="">選系中文說明*</label>
+								<strong class="form-control-label text-danger" for="">選系中文說明*</strong>
 								<textarea class="form-control" rows="4" id="description"></textarea>
 							</div>
 						</div>
@@ -184,7 +184,7 @@
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasReviewFee" value="">
-														是否需要收審查費用*
+														是否需要收審查費用
 													</label>
 												</div>
 												<hr>
@@ -201,7 +201,9 @@
 									</div>
 								</div>
 							</div>
-
+							
+							<hr>
+							
 							<div class="row">
 								<div class="col">
 									<div class="card">
@@ -212,31 +214,31 @@
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasForeignSpecialClass" value="">
-														是否招收外生專班*
+														是否招收外生專班
 													</label>
 												</div>
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasEngTaught" value="">
-														是否為全英文授課*
+														是否為全英文授課
 													</label>
 												</div>
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
-														是否招收身障學生*
+														是否招收身障學生
 													</label>
 												</div>
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
-														是否招收不具華文基礎學生*
+														是否招收不具華文基礎學生
 													</label>
 												</div>
 												<div class="form-check">
 													<label class="form-check-label">
 														<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
-														是否限制出生日期*
+														是否限制出生日期
 													</label>
 												</div>
 
@@ -259,8 +261,8 @@
 								</div>
 							</div>
 						
-
 							<hr>
+							
 							<div id="form-reviewItems">
 								<div v-for="type in reviewItemsTypes">
 									<div class="card">
@@ -320,11 +322,10 @@
 											</div>
 										</div>
 									</div>
+									<hr>
 								</div>
 							</div>
 						</div>
-
-						<hr>
 
 						<div class="row">
 							<div id="memoForm" class="form-group col">
