--- a/index.ejs
+++ b/index.ejs
@@ -19,17 +19,17 @@
 	</div>
 	<div class="row">
 		<div id="phoneForm" class="form-group col-6">
-			<label class="form-control-label" for="">學校電話號碼*</label>
+			<strong class="form-control-label text-danger" for="">學校電話號碼*</strong>
 			<input id="phone" type="text" class="form-control">
 		</div>
 		<div id="faxForm" class="form-group col-6">
-			<label class="form-control-label" for="">學校傳真號碼*</label>
+			<strong class="form-control-label text-danger" for="">學校傳真號碼*</strong>
 			<input id="fax" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div id="urlForm" class="form-group col-6">
-			<label class="form-control-label" for="">學校中文網址*</label>
+			<strong class="form-control-label text-danger" for="">學校中文網址*</strong>
 			<input id="url" type="text" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
@@ -39,7 +39,7 @@
 	</div>
 	<div class="row">
 		<div id="addressForm" class="form-group col-12">
-			<label class="form-control-label" for="">學校中文地址*</label>
+			<strong class="form-control-label text-danger" for="">學校中文地址*</strong>
 			<input id="address" type="text" class="form-control">
 		</div>
 	</div>
@@ -51,7 +51,7 @@
 	</div>
 	<div class="row">
 		<div id="organizationForm" class="form-group col-6">
-			<label class="form-control-label" for="">承辦單位中文名稱*</label>
+			<strong class="form-control-label text-danger" for="">承辦單位中文名稱*</strong>
 			<input id="organization" type="text" class="form-control">
 		</div>
 		<div id="engOrganizationForm" class="form-group col-6">
@@ -77,7 +77,7 @@
 					</div>
 					<div class="row">
 						<div id="dormInfoForm" class="form-group col-12">
-							<label class="form-control-label" for="">宿舍中文說明*</label>
+							<strong class="form-control-label text-danger" for="">宿舍中文說明*</strong>
 							<input id="dormInfo" type="text" class="form-control">
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipDeptForm" class="form-group col-6">
-							<label class="form-control-label" for="">獎學金負責單位中文名稱*</label>
+							<strong class="form-control-label text-danger" for="">獎學金負責單位中文名稱*</strong>
 							<input id="scholarshipDept" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipDeptForm" class="form-group col-6">
@@ -119,7 +119,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipUrlForm" class="form-group col-6">
-							<label class="form-control-label" for="">僑生專屬獎學金中文說明網址*</label>
+							<strong class="form-control-label text-danger" for="">僑生專屬獎學金中文說明網址*</strong>
 							<input id="scholarshipUrl" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipUrlForm" class="form-group col-6">
@@ -148,7 +148,7 @@
 					</div>
 					<div class="row">
 						<div id="ruleOfFiveYearStudentForm" class="form-group col-12">
-							<label class="form-control-label" for="">學則*</label>
+							<strong class="form-control-label text-danger" for="">學則*</strong>
 							<textarea id="ruleOfFiveYearStudent" type="text" class="form-control" rows="3"></textarea>
 						</div>
 					</div>
@@ -184,7 +184,7 @@
 					</div>
 					<div class="row">
 						<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
-							<label class="form-control-label" for="">自招核定文號*</label>
+							<strong class="form-control-label text-danger" for="">自招核定文號*</strong>
 							<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
 						</div>
 					</div>
