更新文字說明

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -15,13 +15,13 @@
 <div id="form-deptInfo"> 
 	<div class="row">
 		<div class="form-group col">
-			<label for="description">中文備註</label>
+			<label for="description">學制中文備註</label>
 			<textarea id="description" type="text" class="form-control" rows="6"></textarea>
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col">
-			<label for="engDescription">英文備註</label>
+			<label for="engDescription">學制英文備註</label>
 			<textarea id="engDescription" type="text" class="form-control" rows="6"></textarea>
 		</div>
 	</div>
@@ -110,11 +110,11 @@
 						</div>
 						<div class="row">
 							<div id="urlForm" class="form-group col-6">
-								<strong class="form-control-label text-danger" for="">系中文網站網址*</strong>
+								<strong class="form-control-label text-danger" for="">系所中文網站網址*</strong>
 								<input type="text" class="form-control" id="url">
 							</div>
 							<div id="engUrlForm" class="form-group col-6">
-								<label class="form-control-label" for="">系英文網站網址</label>
+								<label class="form-control-label" for="">系所英文網站網址</label>
 								<input type="text" class="form-control" id="engUrl">
 							</div>
 						</div>
@@ -148,13 +148,13 @@
 						</div>
 						<div class="row">
 							<div id="descriptionForm" class="form-group col">
-								<strong class="form-control-label text-danger" for="">選系中文說明*</strong>
+								<strong class="form-control-label text-danger" for="">中文系所分則*</strong>
 								<textarea class="form-control" rows="4" id="description"></textarea>
 							</div>
 						</div>
 						<div class="row">
 							<div id="engDescriptionForm" class="form-group col">
-								<label class="form-control-label" for="">選系英文說明</label>
+								<label class="form-control-label" for="">英文系所分則</label>
 								<textarea class="form-control" rows="4" id="engDescription"></textarea>
 							</div>
 						</div>
@@ -208,7 +208,7 @@
 								<div class="col">
 									<div class="card">
 										<div class="card-header bg-primary text-white">
-											other
+											系組招生規定
 										</div>
 										<div class="card-block">
 												<div class="form-check">
