--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -1,11 +1,11 @@
 <!-- 僅在 碩、博、二技 時顯示 -->
 <div class="row">
 	<div class="form-group col-6" id="admissionSelectionQuotaForm">
-		<label class="form-control-label" for="">聯招(個人申請)人數（碩博二技專用）</label>
+		<label class="form-control-label" for="">個人申請人數</label>
 		<input type="text" class="form-control" id="admissionSelectionQuota">
 	</div>
 	<div class="form-group col-6" id="selfEnrollmentQuotaForm">
-		<label class="form-control-label" for="">自招人數</label>
+		<label class="form-control-label" for="">單獨招收僑生（自招）人數</label>
 		<input type="text" class="form-control" id="selfEnrollmentQuota">
 	</div>
 </div>
