--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -1,7 +1,7 @@
 <!-- 僅在 學士 時顯示 -->
 <div class="row">
 	<div class="form-group col-4">
-		<label for="">聯招人數（學士專用）</label>
+		<label for="">海外聯合招生管道人數</label>
 		<input type="text" class="form-control" id="admissionTotalQuota" disabled>
 	</div>
 	<div class="form-group col-1">
