--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -3,7 +3,7 @@
 	<div class="col">
 		<div class="card">
 			<div class="card-header bg-primary text-white">
-				單獨招收僑生（自招）（學碩博專用）
+				單獨招收僑生（自招）
 			</div>
 			<div class="card-block">
 				<form>
@@ -12,7 +12,7 @@
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
-									本校是否可單獨招收僑生
+									本校是否可單獨招收僑生（自招）
 								</label>
 							</div>
 						</div>
@@ -32,7 +32,7 @@
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="hasSpecialClass">
-									是否開設僑生專班（有自主招生才能開專班）
+									是否開設僑生專班（有自招才能開專班）
 								</label>
 							</div>
 						</div>
