--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -3,14 +3,14 @@
 	<div class="col">
 		<div class="card">
 			<div class="card-header bg-primary text-white">
-				單獨招收僑生（自招）（二技專用）
+				單獨招收僑生（自招）
 			</div>
 			<div class="card-block">
 				<form>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
-							本校是否可單獨招收僑生
+							本校是否可單獨招收僑生（自招）
 						</label>
 					</div>
 					<div class="form-check">
