修改系所資料當中必繳備審項目的文字說明

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -296,7 +296,7 @@
 															type="text"
 															class="form-control"
 															style="background-color: white;"
-															value="是否為必備" 
+															value="是否設為必繳資料"
 															disabled="disabled">
 														</div>
 													</div>
