必填改成紅色，不是粗的（？暫定

--- a/index.ejs
+++ b/index.ejs
@@ -19,17 +19,17 @@
 	</div>
 	<div class="row">
 		<div id="phoneForm" class="form-group col-6">
-			<strong class="form-control-label text-danger" for="">學校電話號碼*</strong>
+			<label class="form-control-label text-danger" for="">學校電話號碼*</label>
 			<input id="phone" type="text" class="form-control">
 		</div>
 		<div id="faxForm" class="form-group col-6">
-			<strong class="form-control-label text-danger" for="">學校傳真號碼*</strong>
+			<label class="form-control-label text-danger" for="">學校傳真號碼*</label>
 			<input id="fax" type="text" class="form-control">
 		</div>
 	</div>
 	<div class="row">
 		<div id="urlForm" class="form-group col-6">
-			<strong class="form-control-label text-danger" for="">學校中文網址*</strong>
+			<label class="form-control-label text-danger" for="">學校中文網址*</label>
 			<input id="url" type="text" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
@@ -39,7 +39,7 @@
 	</div>
 	<div class="row">
 		<div id="addressForm" class="form-group col-12">
-			<strong class="form-control-label text-danger" for="">學校中文地址*</strong>
+			<label class="form-control-label text-danger" for="">學校中文地址*</label>
 			<input id="address" type="text" class="form-control">
 		</div>
 	</div>
@@ -51,7 +51,7 @@
 	</div>
 	<div class="row">
 		<div id="organizationForm" class="form-group col-6">
-			<strong class="form-control-label text-danger" for="">承辦單位中文名稱*</strong>
+			<label class="form-control-label text-danger" for="">承辦單位中文名稱*</label>
 			<input id="organization" type="text" class="form-control">
 		</div>
 		<div id="engOrganizationForm" class="form-group col-6">
