學制中文備註，改成必填紅色

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -19,7 +19,7 @@
 <div id="form-deptInfo"> 
 	<div class="row">
 		<div class="form-group col">
-			<label for="description">學制中文備註*</label>
+			<label for="description" class="text-danger">學制中文備註*</label>
 			<textarea id="description" type="text" class="form-control required" rows="6"></textarea>
 		</div>
 	</div>
