把必填粗體改成正常粗細

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -114,7 +114,7 @@
 						</div>
 						<div class="row">
 							<div id="urlForm" class="form-group col-6">
-								<strong class="form-control-label text-danger" for="">系所中文網站網址*</strong>
+								<label class="form-control-label text-danger" for="">系所中文網站網址*</label>
 								<input type="text" class="form-control" id="url">
 							</div>
 							<div id="engUrlForm" class="form-group col-6">
@@ -124,7 +124,7 @@
 						</div>
 						<div class="row">
 							<div id="mainGroupForm" class="form-group col-6">
-								<strong class="form-control-label text-danger" for="">主要隸屬學群*</strong>
+								<label class="form-control-label text-danger" for="">主要隸屬學群*</label>
 								<select class="form-control" id="mainGroup">
 								</select>
 							</div>
@@ -136,15 +136,17 @@
 						</div>
 						<div class="row">
 							<div id="genderLimitForm" class="form-group col-6">
-								<strong class="form-control-label text-danger" for="">招收性別限制*</strong>
+								<label class="form-control-label text-danger" for="">招收性別限制*</label>
 								<select class="form-control" id="genderLimit">
 									<option value="">男女兼收</option>
 									<option value="M">限男</option>
 									<option value="F">限女</option>
 								</select>
 							</div>
-							<div id="evaluationForm" class="form-group col-6">
-								<strong class="form-control-label text-danger" for="">最近一次系所評鑑*</strong>
+						</div>
+						<div class="row">
+							<div id="evaluationForm" class="form-group col-12">
+								<label class="form-control-label text-danger" for="">最近一次系所評鑑*</label>
 								<select class="form-control" id="evaluation">
 									<option>系所評鑑</option>
 								</select>
@@ -152,7 +154,7 @@
 						</div>
 						<div class="row">
 							<div id="descriptionForm" class="form-group col">
-								<strong class="form-control-label text-danger" for="">中文系所分則*</strong>
+								<label class="form-control-label text-danger" for="">中文系所分則*</label>
 								<textarea class="form-control" rows="4" id="description"></textarea>
 							</div>
 						</div>
