--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -312,49 +312,52 @@
 											</div>	
 
 											<!-- 如果是師長推薦函 -->
-											<div v-if="type.name == '師長推薦函'">
+											<!-- 8 26 46 66 -->
+											<div v-if="type.id == 8 || type.id == 26 || type.id == 46 || type.id == 66">
 												<div class="row">
 													<div class="col-lg-6">
 														<div class="form-group">
 															<div class="input-group">
 																<span class="input-group-addon">
-																	<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
+																	<input type="checkbox" v-model="type.needPaper" v-bind:disabled="!type.needed">
 																</span>
 																<input
 																type="text"
 																class="form-control"
 																style="background-color: white;"
 																value="是否需要紙本推薦函"
-																disabled="disabled">
+																disabled>
 															</div>
 														</div>
 													</div>
 												</div>
 
-												<div class="row">
-													<div class="form-group col-6">
-														<label>收件人 (英文)</label>
-														<input id="" type="text" class="form-control">
+												<div id="paper-form-div">
+													<div class="row">
+														<div class="form-group col-6">
+															<label class="text-danger">收件人英文姓名*</label>
+															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+														</div>
+														<div class="form-group col-6">
+															<label class="text-danger">聯絡電話*</label>
+															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+														</div>
 													</div>
-													<div class="form-group col-6">
-														<label>聯絡電話</label>
-														<input id="" type="text" class="form-control">
+													<div class="row">
+														<div class="form-group col-6">
+															<label class="text-danger">郵遞區號*</label>
+															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+														</div>
+														<div class="form-group col-6">
+															<label class="text-danger">收件期限*</label>
+															<input id="recieve" type="text" class="form-control datepicker" v-bind:disabled="!type.needPaper">
+														</div>
 													</div>
-												</div>
-												<div class="row">
-													<div class="form-group col-6">
-														<label>郵遞區號</label>
-														<input id="" type="text" class="form-control">
-													</div>
-													<div class="form-group col-6">
-														<label>收件期限</label>
-														<input id="" type="text" class="form-control">
-													</div>
-												</div>
-												<div class="row">
-													<div class="form-group col-12">
-														<label>收件地址 (英文)</label>
-														<input id="" type="text" class="form-control">
+													<div class="row">
+														<div class="form-group col-12">
+															<label class="text-danger">英文收件地址*</label>
+															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+														</div>
 													</div>
 												</div>
 											</div>
