--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -135,6 +135,14 @@
 							</div>
 						</div>
 						<div class="row">
+							<div id="groupCodeForm" class="form-group col-6">
+								<label class="form-control-label text-danger" for="">類組*</label>
+								<select class="form-control" id="groupCode">
+									<option value="1">第一類組</option>
+									<option value="2">第二類組</option>
+									<option value="3">第三類組</option>
+								</select>
+							</div>
 							<div id="genderLimitForm" class="form-group col-6">
 								<label class="form-control-label text-danger" for="">招收性別限制*</label>
 								<select class="form-control" id="genderLimit">
