--- a/index.ejs
+++ b/index.ejs
@@ -77,7 +77,7 @@
 					</div>
 					<div class="row">
 						<div id="dormInfoForm" class="form-group col-12">
-							<strong class="form-control-label text-danger" for="">宿舍中文說明*</strong>
+							<label class="form-control-label text-danger" for="">宿舍中文說明*</label>
 							<input id="dormInfo" type="text" class="form-control">
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipDeptForm" class="form-group col-6">
-							<strong class="form-control-label text-danger" for="">獎學金負責單位中文名稱*</strong>
+							<label class="form-control-label text-danger" for="">獎學金負責單位中文名稱*</label>
 							<input id="scholarshipDept" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipDeptForm" class="form-group col-6">
@@ -119,7 +119,7 @@
 					</div>
 					<div class="row">
 						<div id="scholarshipUrlForm" class="form-group col-6">
-							<strong class="form-control-label text-danger" for="">僑生專屬獎學金中文說明網址*</strong>
+							<label class="form-control-label text-danger" for="">僑生專屬獎學金中文說明網址*</label>
 							<input id="scholarshipUrl" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipUrlForm" class="form-group col-6">
@@ -148,7 +148,7 @@
 					</div>
 					<div class="row">
 						<div id="ruleOfFiveYearStudentForm" class="form-group col-12">
-							<strong class="form-control-label text-danger" for="">學則*</strong>
+							<label class="form-control-label text-danger" for="">學則*</label>
 							<textarea id="ruleOfFiveYearStudent" type="text" class="form-control" rows="3"></textarea>
 						</div>
 					</div>
@@ -184,7 +184,7 @@
 					</div>
 					<div class="row">
 						<div id="approvalNoOfSelfEnrollmentForm" class="form-group col-12">
-							<strong class="form-control-label text-danger" for="">自招核定文號*</strong>
+							<label class="form-control-label text-danger" for="">自招核定文號*</label>
 							<input id="approvalNoOfSelfEnrollment" type="text" class="form-control">
 						</div>
 					</div>
