--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -327,7 +327,7 @@
 														<div class="form-group">
 															<div class="input-group">
 																<span class="input-group-addon">
-																	<input type="checkbox" v-model="type.needPaper" v-bind:disabled="!type.needed">
+																	<input type="checkbox" v-model="type.need_paper" v-bind:disabled="!type.needed">
 																</span>
 																<input
 																type="text"
@@ -344,27 +344,27 @@
 													<div class="row">
 														<div class="form-group col-6">
 															<label class="text-danger">收件人英文姓名*</label>
-															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+															<input type="text" class="form-control" v-model="type.recipient" v-bind:disabled="!type.need_paper">
 														</div>
 														<div class="form-group col-6">
 															<label class="text-danger">聯絡電話*</label>
-															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+															<input type="text" class="form-control" v-model="type.recipient_phone" v-bind:disabled="!type.need_paper">
 														</div>
 													</div>
 													<div class="row">
 														<div class="form-group col-6">
 															<label class="text-danger">郵遞區號*</label>
-															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+															<input type="text" class="form-control" v-model="type.postal_code" v-bind:disabled="!type.need_paper">
 														</div>
 														<div class="form-group col-6">
 															<label class="text-danger">收件期限*</label>
-															<input id="recieve" type="text" class="form-control datepicker" v-bind:disabled="!type.needPaper">
+															<input id="recieveDeadline" type="text" class="form-control datepicker" v-bind:disabled="!type.need_paper">
 														</div>
 													</div>
 													<div class="row">
 														<div class="form-group col-12">
 															<label class="text-danger">英文收件地址*</label>
-															<input type="text" class="form-control" v-bind:disabled="!type.needPaper">
+															<input type="text" class="form-control" v-model="type.recieve_address" v-bind:disabled="!type.need_paper">
 														</div>
 													</div>
 												</div>
