--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -352,19 +352,19 @@
 														</div>
 													</div>
 													<div class="row">
+														<div class="form-group col-12">
+															<label class="text-danger">英文收件地址*</label>
+															<input type="text" class="form-control" v-model="type.recieve_address" v-bind:disabled="!type.need_paper">
+														</div>
+													</div>
+													<div class="row">
 														<div class="form-group col-6">
-															<label class="text-danger">郵遞區號*</label>
-															<input type="text" class="form-control" v-model="type.postal_code" v-bind:disabled="!type.need_paper">
+															<label class="text-danger">E-mail*</label>
+															<input type="email" class="form-control" v-model="type.receive_email" v-bind:disabled="!type.need_paper">
 														</div>
 														<div class="form-group col-6">
 															<label class="text-danger">收件期限*</label>
 															<input id="recieveDeadline" type="text" class="form-control datepicker" v-bind:disabled="!type.need_paper">
-														</div>
-													</div>
-													<div class="row">
-														<div class="form-group col-12">
-															<label class="text-danger">英文收件地址*</label>
-															<input type="text" class="form-control" v-model="type.recieve_address" v-bind:disabled="!type.need_paper">
 														</div>
 													</div>
 												</div>
