--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -360,7 +360,7 @@
 													<div class="row">
 														<div class="form-group col-6">
 															<label class="text-danger">E-mail*</label>
-															<input type="email" class="form-control" v-model="type.receive_email" v-bind:disabled="!type.need_paper">
+															<input type="email" class="form-control" v-model="type.recieve_email" v-bind:disabled="!type.need_paper">
 														</div>
 														<div class="form-group col-6">
 															<label class="text-danger">收件期限*</label>
