--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -12,7 +12,7 @@
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
-									本校是否可單獨招收僑生（自招）
+									本校是否可單獨招收僑生（自招）（若是，請勾選）
 								</label>
 							</div>
 						</div>
@@ -22,7 +22,7 @@
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
-									是否單獨招收僑生（自招）
+									是否單獨招收僑生（自招）（若是，請勾選）
 								</label>
 							</div>
 						</div>
@@ -32,7 +32,7 @@
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="hasSpecialClass">
-									是否開設僑生專班（有自招才能開專班）
+									是否開設僑生專班（有自招才能開專班）（若是，請勾選）
 								</label>
 							</div>
 						</div>
