--- a/index.ejs
+++ b/index.ejs
@@ -71,7 +71,7 @@
 						<div class="form-group col-6">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasDorm" type="checkbox"></span>
-								<input type="text" class="form-control" value="是否提供宿舍*" disabled>
+								<input type="text" class="form-control" value="是否提供宿舍*（若是，請勾選）" disabled>
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 						<div class="form-group col-6">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasScholarship" type="checkbox"></span>
-								<input type="text" class="form-control" value="是否提供僑生專屬獎學金*" disabled>
+								<input type="text" class="form-control" value="是否提供僑生專屬獎學金*（若是，請勾選）" disabled>
 							</div>
 						</div>
 					</div>
@@ -142,7 +142,7 @@
 						<div class="form-group col-6">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasFiveYearStudentAllowed" type="checkbox"></span>
-								<input type="text" class="form-control" value="是否招收中五生*" disabled>
+								<input type="text" class="form-control" value="是否招收中五生*（若是，請勾選）" disabled>
 							</div>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						<div class="form-group col-6">
 							<div class="input-group">
 								<span class="input-group-addon"><input id="hasSelfEnrollment" type="checkbox"></span>
-								<input type="text" class="form-control" value="是否單獨招收僑生（自招）*" disabled>
+								<input type="text" class="form-control" value="是否單獨招收僑生（自招）*（若是，請勾選）" disabled>
 							</div>
 						</div>
 					</div>
