--- a/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
+++ b/components/deptInfoForm/_selfEnrollmentTwoYear.ejs
@@ -10,25 +10,25 @@
 					<div class="form-check">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="schoolHasSelfEnrollment" disabled>
-							本校是否可單獨招收僑生（自招）
+							本校是否可單獨招收僑生（自招）（若是，請勾選）
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="hasRiJian">
-							是否開設日間二技學制
+							是否開設日間二技學制（若是，請勾選）
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
-							是否單獨招收僑生（自招）
+							是否單獨招收僑生（自招）（若是，請勾選）
 						</label>
 					</div>
 					<div class="form-check">
 						<label class="form-check-label">
 							<input class="form-check-input" type="checkbox" id="hasSpecialClass">
-							是否開設僑生專班
+							是否開設僑生專班（若是，請勾選）
 						</label>
 					</div>
 					<hr>
