--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -18,7 +18,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col col-lg-4">
+						<div class="col">
 							<div class="form-check">
 								<label class="form-check-label">
 									<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
