不顯示「是否招收身障生」問項

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -207,14 +207,12 @@
 													是否為全英文授課（若是，請勾選）
 												</label>
 											</div>
-											<!--
-											<div class="form-check">
+											<div class="form-check" style="display:none">
 												<label class="form-check-label">
 													<input class="form-check-input" type="checkbox" id="hasDisabilities" value="">
 													是否招收身障學生
 												</label>
 											</div>
-											-->
 											<div class="form-check">
 												<label class="form-check-label">
 													<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
