更改審查項目，如果沒有某一個審查項目，則該項目的"是否設為必繳資料"會被封起來

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -298,7 +298,7 @@
 															class="form-control"
 															style="background-color: white;"
 															v-bind:value="type.name"
-															disabled="disabled">
+															disabled>
 														</div>
 													</div>
 												</div>
@@ -306,14 +306,14 @@
 													<div class="form-group">
 														<div class="input-group">
 															<span class="input-group-addon">
-																<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable">
+																<input type="checkbox" v-model="type.required" v-bind:disabled="!type.modifiable || !type.needed">
 															</span>
 															<input
 															type="text"
 															class="form-control"
 															style="background-color: white;"
 															value="是否設為必繳資料（若是，請勾選）"
-															disabled="disabled">
+															disabled>
 														</div>
 													</div>
 												</div>
