編輯帳號時，"職稱"現在有 required 了

--- a/components/_accountEditModal.ejs
+++ b/components/_accountEditModal.ejs
@@ -34,7 +34,7 @@
 								</div>
 								<div class="form-group col-6 text-danger">
 									<strong>職稱*</strong>
-									<input type="text" class="form-control" name="job-title">
+									<input type="text" class="form-control required" name="job-title">
 								</div>
 							</div>
 							<div class="row">
