提示填寫身障生相關說明

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -162,7 +162,8 @@
 						</div>
 						<div class="row">
 							<div id="descriptionForm" class="form-group col">
-								<label class="form-control-label text-danger" for="">中文系所分則*</label>
+								<label class="form-control-label text-danger" for="">中文系所分則*</label><br />
+                                (可填寫是否提供身心障礙學生學習輔具資源及生活照輔措施等資源，以利學生先行了解並自行評估)<br />
 								<textarea class="form-control" rows="4" id="description"></textarea>
 							</div>
 						</div>
