--- a/components/deptInfoForm/_quotaBachelor.ejs
+++ b/components/deptInfoForm/_quotaBachelor.ejs
@@ -10,7 +10,7 @@
 	</div>
 	<div id="admissionSelectionQuotaForm" class="form-group col-3">
 		<label class="form-control-label" for="">個人申請人數</label>
-		<input type="text" class="form-control" id="admissionSelectionQuota">
+		<input type="text" class="form-control" id="admissionSelectionQuota" disabled>
 	</div>
 	<div class="form-group col-1">
 		<label for="">　</label>
@@ -20,7 +20,7 @@
 		<label class="form-control-label" for="">
 		聯合分發人數 <i class="fa fa-question-circle" id="placementQuotaTip" aria-hidden="true" data-toggle="tooltip" data-placement="top" data-animation="false"></i>
 		</label>
-		<input type="text" class="form-control" id="admissionPlacementQuota">
+		<input type="text" class="form-control" id="admissionPlacementQuota" disabled>
 	</div>
 </div>
 
