四學制名額部分關閉。

--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -224,12 +224,12 @@
 													是否招收身障學生
 												</label>
 											</div>
-											<!-- <div class="form-check">
+											<div class="form-check" style="display: none">
 												<label class="form-check-label">
 													<input class="form-check-input" type="checkbox" id="hasBuHweiHwaWen" value="">
 													是否招收不具華文基礎學生（若是，請勾選）
 												</label>
-											</div> -->
+											</div>
 											<div class="form-check">
 												<label class="form-check-label">
 													<input class="form-check-input" type="checkbox" id="hasBirthLimit" value="">
