--- a/components/deptInfoForm/_selfEnrollmentOthers.ejs
+++ b/components/deptInfoForm/_selfEnrollmentOthers.ejs
@@ -21,7 +21,7 @@
 						<div class="col">
 							<div class="form-check">
 								<label class="form-check-label">
-									<input class="form-check-input" type="checkbox" id="hasSelfEnrollment">
+									<input class="form-check-input" type="checkbox" id="hasSelfEnrollment" disabled>
 									是否單獨招收僑生（自招）（若是，請勾選）
 								</label>
 							</div>
