登入頁面放上暫時備註

--- a/login.ejs
+++ b/login.ejs
@@ -45,4 +45,15 @@
 		</form>
 	</div>
 </div>
+<div class="row" style="padding-bottom: 5%; color:crimson">
+	<div class="col-md-12" style="text-align: center">
+		欲申請僑生名額增量之學校，務必下載並填列<a href="https://api.overseas.ncnu.edu.tw:8443/forms/海聯108僑生專案擴增名額調查表.xlsx" target="_blank">「108僑生名額增量調查表」</a>，
+	</div>
+	<div class="col-md-12" style="text-align: center">
+		於107年6月20日（星期三）前備文敘明擬增量之班別且檢附前開增量調查表向教育部提出申請，
+	</div>
+	<div class="col-md-12" style="text-align: center">
+		副知本會並將調查表電子檔併寄至本會電子郵件信箱（overseassurvey@gmail.com）俾利彙整。
+	</div>
+</div>
 <script src="https://rawgit.com/emn178/js-sha256/master/src/sha256.js"></script>
