第一階段調查新增學制留用描述欄位

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -131,6 +131,20 @@
 		</div>
 	</div>
 </div>
+
+<div class="row" style="padding-top: 3%;">
+	<div class="form-group col-9 offset-1">
+		<label for="comment" style="font-weight: bold;font-size:larger">上表各學制名額總量如有學制間流用需求，請說明如下：</label>
+		<textarea class="form-control" rows="5" id="description" style=""></textarea>
+	</div>
+
+	<div class="col-9 offset-1" style="color:midnightblue">
+		EX：學士班現有僑生名額總量為A名，擬由碩士班現有僑生名額總量B名中流用5名至學士班，故學士班僑生名額總量調整為A+5名，碩士班僑生名額總量調整為B-5名
+	</div>
+
+</div>
+
+<hr />
 <hr />
 
 <div class="row" style="font-size:18px">
