擠擠的 改文字說明

--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -134,12 +134,12 @@
 
 <div class="row" style="padding-top: 3%;">
 	<div class="form-group col-9 offset-1">
-		<label for="comment" style="font-weight: bold;font-size:larger">上表各學制名額總量如有學制間流用需求，請說明如下：</label>
+		<label for="comment" style="font-weight: bold;font-size:larger">各班別（學士班、碩士班及博士班）間如有名額流用需求，請說明如下：</label>
 		<textarea class="form-control" rows="5" id="description" style=""></textarea>
 	</div>
 
 	<div class="col-9 offset-1" style="color:midnightblue">
-		EX：學士班現有僑生名額總量為A名，擬由碩士班現有僑生名額總量B名中流用5名至學士班，故學士班僑生名額總量調整為A+5名，碩士班僑生名額總量調整為B-5名
+		EX：學士班現有僑生名額總量為 A 名，擬由碩士班現有僑生名額總量 B 名中流用 5 名至學士班，故學士班僑生名額總量調整為 A+5 名，碩士班僑生名額總量調整為 B-5 名。
 	</div>
 
 </div>
@@ -149,7 +149,8 @@
 
 <div class="row" style="font-size:18px">
 	<ul>
-		<li><span style="color:red"> 107學年度本地生招生缺額數 </span>請依據實際招收僑生之需求填報。例如：學校107學年度本地生招生缺額數計50名，其中30名擬招收僑生（含港澳生及港澳具外國國籍之華裔學生），<br /> 請依實際需求填30名。</li>
+		<li><span style="color:red"> 107學年度本地生招生缺額數 </span>請依據實際招收僑生之需求填報。例如：學校107學年度本地生招生缺額數計50名，其中30名擬招收僑生（含港澳生及港澳具外國國籍之華裔學生），請依實際需求填30名。</li>
+		<li>班別間名額流用：學校如因招生情形良好，名額不敷使用，或有選才需求之考量，得敘明招生概況及系所資源因應措施，並確認在符合「專科以上學校總量發展規模與資源條件標準」師資質量規定下，流用名額至其他班別，流用原因並請於備註欄位敘明。惟若該班別未規劃招收僑生，其外加名額不得流用至該班別。</li>
 		<li>請於<span style="color:red"> 6月20日（星期三）下午5時前 </span>登入本系統填報108學年度各學制僑生招生名額總量（含招生名額增量調查表），確認無誤並列印系統產生之「108學年度僑生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：overseassurvey@gmail.com，傳真：049-2911182），始完成僑生名額填報作業。</li>
 		<li>欲申請僑生名額增量之學校，務必下載並填列<a href="https://api.overseas.ncnu.edu.tw:8443/forms/海聯108僑生專案擴增名額調查表.xlsx" target="_blank">「108僑生名額增量調查表」</a>，於107年6月20日（星期三）前備文敘明擬增量之班別且檢附前開增量調查表向教育部提出申請，副知本會並將調查表電子檔併寄至本會電子郵件信箱（overseassurvey@gmail.com）俾利彙整。</li>
 	</ul>
