學校資料增加鎖定功能

--- a/index.ejs
+++ b/index.ejs
@@ -204,10 +204,16 @@
 		</div>
 	</div>
 	<div class="row">
-    <div class="col-12 text-center">
-      <button id="btn-save" data-action="save" class="btn btn-primary">
-        儲存
-      </button>
+		<div class="offset-2 col-2 text-center">
+			<button id="btn-save" data-action="save" class="btn btn-primary">
+				儲存
+			</button>
+		</div>
+		<div class="offset-3 col-2 text-center">
+			<button class="btn btn-danger" id="btn-lock-school">
+				鎖定學校資料
+			</button>
+		</div>
     </div>
   </div>
 </div>
