學校資料 英文欄位改必填

--- a/index.ejs
+++ b/index.ejs
@@ -33,7 +33,7 @@
 			<input id="url" type="text" class="form-control">
 		</div>
 		<div id="engUrlForm" class="form-group col-6">
-			<label class="form-control-label" for="">學校英文網址</label>
+			<label class="form-control-label text-danger" for="">學校英文網址*</label>
 			<input id="engUrl" type="text" class="form-control">
 		</div>
 	</div>
@@ -45,7 +45,7 @@
 	</div>
 	<div class="row">
 		<div id="engAddressForm" class="form-group col-12">
-			<label class="form-control-label" for="">學校英文地址</label>
+			<label class="form-control-label text-danger" for="">學校英文地址*</label>
 			<input id="engAddress" type="text" class="form-control">
 		</div>
 	</div>
@@ -55,7 +55,7 @@
 			<input id="organization" type="text" class="form-control">
 		</div>
 		<div id="engOrganizationForm" class="form-group col-6">
-			<label class="form-control-label" for="">承辦單位英文名稱</label>
+			<label class="form-control-label text-danger" for="">承辦單位英文名稱*</label>
 			<input id="engOrganization" type="text" class="form-control">
 		</div>
 	</div>
@@ -83,7 +83,7 @@
 					</div>
 					<div class="row">
 						<div id="dormEngInfoForm" class="form-group col-12">
-							<label class="form-control-label" for="">宿舍英文說明</label>
+							<label class="form-control-label text-danger" for="">宿舍英文說明*</label>
 							<input id="dormEngInfo" type="text" class="form-control">
 						</div>
 					</div>
@@ -113,7 +113,7 @@
 							<input id="scholarshipDept" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipDeptForm" class="form-group col-6">
-							<label class="form-control-label" for="">獎學金負責單位英文名稱</label>
+							<label class="form-control-label text-danger" for="">獎學金負責單位英文名稱*</label>
 							<input id="engScholarshipDept" type="text" class="form-control">
 						</div>
 					</div>
@@ -123,7 +123,7 @@
 							<input id="scholarshipUrl" type="text" class="form-control">
 						</div>
 						<div id="engScholarshipUrlForm" class="form-group col-6">
-							<label class="form-control-label" for="">僑生專屬獎學金英文說明網址</label>
+							<label class="form-control-label text-danger" for="">僑生專屬獎學金英文說明網址*</label>
 							<input id="engScholarshipUrl" type="text" class="form-control">
 						</div>
 					</div>
