系所資料的名額只能看不能改

--- a/components/deptInfoForm/_quotaOthers.ejs
+++ b/components/deptInfoForm/_quotaOthers.ejs
@@ -2,7 +2,7 @@
 <div class="row">
 	<div class="form-group col-6" id="admissionSelectionQuotaForm">
 		<label class="form-control-label" for="">個人申請人數</label>
-		<input type="text" class="form-control" id="admissionSelectionQuota">
+		<input type="text" class="form-control" id="admissionSelectionQuota" disabled>
 	</div>
 	<div class="form-group col-6" id="selfEnrollmentQuotaForm">
 		<label class="form-control-label" for="">單獨招收僑生（自招）人數</label>
